--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -422,7 +422,7 @@
   booktitle = {NAACL HLT Workshop on Creating Speech and Language Data with Amazon's Mechanical Turk},
   year      = {2010},
   pages     = {195-203},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.02},
   url       = {http://dl.acm.org/citation.cfm?id=1866727},
@@ -448,6 +448,7 @@
   year      = {2005},
   author    = {Alba, E.},
   doi       = {10.1002/0471739383},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
 }
@@ -789,7 +790,7 @@
 }
 
 @InProceedings{Ana2003,
-  author    = {Ana, L. N. F. and Jain, A. K.},
+  author    = {Fred , A. L. N. and Jain, A. K.},
   title     = {Robust data clustering},
   booktitle = {IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
   year      = {2003},
@@ -943,7 +944,7 @@
   number    = {8},
   pages     = {1380-1390},
   doi       = {10.1109/tac.2007.902733},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
 }
@@ -1371,7 +1372,7 @@
   number    = {4},
   pages     = {1611-1630},
   doi       = {10.1137/120875338},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.22},
 }
@@ -1462,6 +1463,7 @@
   title     = {The power of negative thinking: Exploiting label disagreement in the min-cut classification framework},
   booktitle = {23rd International Conference on Computational Linguistics},
   year      = {2008},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.02},
   url       = {http://www.cs.cornell.edu/home/llee/papers/disagree.home.html},
@@ -1519,7 +1521,7 @@
   number    = {10},
   pages     = {3241-253},
   doi       = {10.1088/0305-4470/15/10/028},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
 }
@@ -2171,7 +2173,7 @@
   pages     = {056119},
   doi       = {10.1103/PhysRevE.83.056119},
   file      = {:Tolerating the community detection resolution limit with edge weighting.pdf:PDF},
-  groups    = {Graph Partitioning},
+  groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.07.29},
 }
@@ -2264,7 +2266,7 @@
   number    = {4},
   pages     = {801-976},
   doi       = {10.1103/revmodphys.58.801},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
 }
@@ -2533,7 +2535,7 @@
   pages     = {1-32},
   doi       = {10.1007/s10115-012-0522-9},
   file      = {:Overlapping correlation clustering.pdf:PDF},
-  groups    = {Graph Partitioning},
+  groups    = {Graph Partitioning, _To do},
   owner     = {Vincent},
   timestamp = {2017.06.29},
 }
@@ -2932,6 +2934,7 @@
   title     = {Recommender system for online dating service},
   booktitle = {Znalosti Conference},
   year      = {2007},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.23},
   url       = {https://arxiv.org/abs/cs/0703042},
@@ -3275,6 +3278,7 @@
   year      = {2014},
   author    = {Burke, E. K. and Kendall, G.},
   doi       = {10.1007/978-1-4614-6940-7},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.04},
 }
@@ -3371,6 +3375,7 @@
   pages     = {1956-1982},
   doi       = {10.1137/080738970},
   file      = {:A singular value thresholding algorithm for matrix completion.pdf:PDF},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.25},
 }
@@ -3504,6 +3509,7 @@
   number    = {7},
   pages     = {1097-1111},
   doi       = {10.1016/j.dam.2007.05.058},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
 }
@@ -3594,6 +3600,7 @@
   title     = {The maximum k-balanced subgraph of a signed graph},
   booktitle = {12ème ROADEF},
   year      = {2011},
+  groups    = {_To do},
   owner     = {Vincent},
   timestamp = {2017.07.14},
   url       = {http://sweet.ua.pt/rosa.figueiredo/webpage_fr/publications_fr.html},
@@ -3621,6 +3628,7 @@
   pages         = {34.1-34.20},
   __markedentry = {[Vincent:]},
   file          = {:A correlation clustering approach to link classification in signed networks.pdf:PDF},
+  groups        = {_To do},
   owner         = {Vincent},
   timestamp     = {2017.07.16},
   url           = {https://arxiv.org/abs/1301.4769},
@@ -5259,7 +5267,7 @@
   pages     = {107-114},
   doi       = {10.1109/ICDM.2001.989507},
   file      = {:A min-max cut algorithm for graph partitioning and data clustering.pdf:PDF},
-  groups    = {Graph Partitioning},
+  groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.07.28},
 }
@@ -6105,6 +6113,7 @@
   title     = {Retrofitting Word Vectors to Semantic Lexicons},
   booktitle = {Annual Conference of the North American Chapter of the ACL},
   year      = {2015},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.27},
   url       = {https://arxiv.org/abs/1411.4166},
@@ -6790,6 +6799,7 @@
   number    = {8},
   pages     = {1195-1209},
   doi       = {10.1002/asi.20827},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.05},
 }
@@ -7321,6 +7331,7 @@
   pages     = {326-335},
   doi       = {10.1007/978-981-10-5427-3_35},
   file      = {:Signed Social Networks- A Survey.pdf:PDF},
+  groups    = {_To do},
   owner     = {Vincent},
   timestamp = {2017.07.28},
 }
@@ -8618,7 +8629,7 @@
   pages     = {147-151},
   doi       = {10.1016/j.physa.2007.04.124},
   file      = {:Spectral and network methods in the analysis of correlation matrices of stock returns.pdf:PDF},
-  groups    = {Graph Partitioning},
+  groups    = {Graph Partitioning, _To do},
   owner     = {Vincent},
   timestamp = {2017.07.02},
 }
@@ -8648,7 +8659,7 @@
   pages     = {5930-5945},
   doi       = {10.1016/j.physa.2008.06.028},
   file      = {:Spectral methods and cluster structure in correlation-based networks.pdf:PDF},
-  groups    = {Graph Partitioning},
+  groups    = {Graph Partitioning, _To do},
   owner     = {Vincent},
   timestamp = {2012.08.29},
 }
@@ -9069,7 +9080,7 @@
   __markedentry = {[Vincent:]},
   doi           = {10.1080/0308108031000053611},
   file          = {:On the Laplacian eigenvalues of signed graphs.pdf:PDF},
-  groups        = {Others},
+  groups        = {Others, _To do},
   owner         = {Vincent},
   timestamp     = {2017.06.26},
 }
@@ -9230,6 +9241,7 @@
   booktitle = {21st International Conference on Neural Information Processing Systems},
   year      = {2008},
   pages     = {705-712},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.03},
   url       = {http://dl.acm.org/citation.cfm?id=2981868},
@@ -9301,6 +9313,7 @@
   number    = {3},
   pages     = {283-309},
   doi       = {10.1007/bf02291704},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
 }
@@ -9386,6 +9399,7 @@
   __markedentry = {[Vincent:]},
   doi           = {10.1007/978-3-540-72845-0_23},
   file          = {:Optimal Edge Deletions for Signed Graph Balancing.pdf:PDF},
+  groups        = {_To do},
   owner         = {Vincent},
   timestamp     = {2017.07.14},
 }
@@ -10063,6 +10077,7 @@
   volume    = {20},
   number    = {4},
   pages     = {263-271},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.23},
   url       = {http://dl.acm.org/citation.cfm?id=1365536},
@@ -10461,6 +10476,7 @@ old title: The map equation and the resolution limit in community detection},
   number        = {4},
   __markedentry = {[Vincent:]},
   doi           = {10.1103/physreve.72.046133},
+  groups        = {Ignored},
   timestamp     = {2017.06.28},
 }
 
@@ -10552,7 +10568,7 @@ old title: The map equation and the resolution limit in community detection},
   number    = {5},
   pages     = {1132-1143},
   doi       = {10.1111/j.1462-2920.2010.02154.x},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.08},
 }
@@ -10666,6 +10682,7 @@ old title: The map equation and the resolution limit in community detection},
   number    = {1},
   pages     = {81-95},
   doi       = {10.1007/bf01164627},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
 }
@@ -11738,6 +11755,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1016/j.physa.2017.07.012},
   file          = {:An economic model of friendship and enmity for measuring social balance in networks.pdf:PDF},
+  groups        = {_To do},
   owner         = {Vincent},
   timestamp     = {2017.07.28},
 }
@@ -11774,6 +11792,7 @@ old title: The map equation and the resolution limit in community detection},
   publisher = {North Holland},
   year      = {1974},
   author    = {Lehrer, A.},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.02},
   url       = {https://books.google.fr/books/about/Semantic_Fields_and_Lexical_Structure.html?id=L8BrAAAAIAAJ&redir_esc=y},
@@ -12875,6 +12894,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.12},
 }
 
+@InCollection{Loureno2010,
+  author    = {Lourenço, H. R. and Martin, O. C. and Stützle, T.},
+  title     = {Iterated Local Search: Framework and Applications},
+  booktitle = {Handbook of Metaheuristics},
+  publisher = {Springer},
+  year      = {2010},
+  pages     = {363-397},
+  doi       = {10.1007/978-1-4419-1665-5_12},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.11},
+}
+
 @InCollection{Lovasz1996,
   author    = {Lovász, L.},
   title     = {Random Walks on Graphs: a Survey},
@@ -13467,6 +13499,22 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2010.06.03},
 }
 
+@Article{Maso2014,
+  author    = {dal Maso, C. and Pompa, G. and Puliga, M. and Riotta, G. and Chessa, A.},
+  title     = {Voting Behavior, Coalitions and Government Strength through a Complex Network Analysis},
+  journal   = {PLoS ONE},
+  year      = {2014},
+  volume    = {9},
+  number    = {12},
+  pages     = {e116046},
+  doi       = {10.1371/journal.pone.0116046},
+  file      = {:Voting Behavior, Coalitions and Government Strength through a Complex Network Analysis.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  review    = {http://arxiv.org/abs/1407.0913},
+  timestamp = {2014.07.10},
+}
+
 @Article{Mason2009,
   author        = {Mason, M. J. and Fan, G. and Plath, K. and Zhou, Q. and Horvath, S.},
   title         = {Signed weighted gene co-expression network analysis of transcriptional regulation in murine embryonic stem cells},
@@ -13761,7 +13809,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1109/ENIC.2015.25},
   file          = {:Relevance of Negative Links in Graph Partitioning- A Case Study Using Votes From the European Parliament.pdf:PDF},
-  groups        = {Graph Partitioning, _To do},
+  groups        = {Graph Partitioning, Found},
   owner         = {Vincent},
   timestamp     = {2015.07.10},
 }
@@ -14226,7 +14274,7 @@ old title: The map equation and the resolution limit in community detection},
   number    = {5},
   pages     = {911-921},
   doi       = {10.1287/opre.38.5.911},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
 }
@@ -14927,6 +14975,7 @@ old title: The map equation and the resolution limit in community detection},
   school    = {University of Michigan},
   year      = {1958},
   type      = {PhD thesis},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.16},
 }
@@ -15637,7 +15686,7 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {SIGCHI Conference on Human Factors in Computing Systems Common Ground},
   year      = {1996},
   doi       = {10.1145/238386.238450},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
 }
@@ -15795,6 +15844,7 @@ old title: The map equation and the resolution limit in community detection},
   year      = {2011},
   volume    = {42},
   number    = {14},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.17},
   url       = {https://www.jstatsoft.org/article/view/v042i14},
@@ -16733,6 +16783,7 @@ old title: The map equation and the resolution limit in community detection},
   number    = {3},
   pages     = {e77},
   doi       = {10.1371/journal.pbio.0050077},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.08},
 }
@@ -17036,6 +17087,7 @@ old title: The map equation and the resolution limit in community detection},
   year      = {2000},
   author    = {Scott, J.},
   file      = {:Social Network Analysis, A Handbook.pdf:PDF},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2010.06.03},
   url       = {https://us.sagepub.com/en-us/nam/the-sage-handbook-of-social-network-analysis/book232753},
@@ -17076,6 +17128,7 @@ old title: The map equation and the resolution limit in community detection},
   year      = {2017},
   pages     = {939-949},
   file      = {:Semantic Word Clusters Using Signed Spectral Clustering.pdf:PDF},
+  groups    = {_To do},
   owner     = {Vincent},
   timestamp = {2017.08.03},
   url       = {https://www.aclweb.org/anthology/P/P17/P17-1087.pdf},
@@ -17806,6 +17859,7 @@ old title: The map equation and the resolution limit in community detection},
   pages     = {87-113},
   doi       = {10.1137/1030003},
   file      = {:Systems of ordinary differential equations which generate an order preserving flow. A survey of results.pdf:PDF},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.25},
 }
@@ -17951,7 +18005,7 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {29th AAAI Conference on Artificial Intelligence},
   year      = {2017},
   pages     = {290-296},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.01},
   url       = {http://dl.acm.org/citation.cfm?id=2887048},
@@ -18401,6 +18455,7 @@ old title: The map equation and the resolution limit in community detection},
   volume    = {22},
   number    = {2},
   pages     = {165-187},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.15},
   url       = {http://www.tandfonline.com/doi/full/10.1080/07388940590948583},
@@ -18497,6 +18552,7 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {17th ACM/SIGKDD international conference on Knowledge discovery and data mining},
   year      = {2011},
   doi       = {10.1145/2020408.2020614},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.02},
 }
@@ -19005,7 +19061,7 @@ old title: The map equation and the resolution limit in community detection},
   number    = {6},
   pages     = {1511-1523},
   doi       = {10.1109/tac.2013.2239011},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
 }
@@ -19202,7 +19258,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1111/j.1467-9868.2009.00728.x},
   file          = {:Signed directed acyclic graphs for causal inference.pdf:PDF},
-  groups        = {Others},
+  groups        = {Others, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.08},
 }
@@ -19542,6 +19598,7 @@ old title: The map equation and the resolution limit in community detection},
   pages     = {667-674},
   doi       = {10.1016/j.physa.2007.05.013},
   file      = {:A very fast algorithm for detecting community structures in complex networks.pdf:PDF},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2012.08.31},
 }
@@ -20191,6 +20248,7 @@ old title: The map equation and the resolution limit in community detection},
   pages     = {1049-1054},
   doi       = {10.1109/ICDM.2014.113},
   file      = {:On spectral analysis of signed and dispute graphs.pdf:PDF},
+  groups    = {_To do},
   owner     = {Vincent},
   timestamp = {2017.06.03},
 }
@@ -20700,6 +20758,7 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
   year      = {2012},
   pages     = {1212-1222},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.27},
   url       = {http://dl.acm.org/citation.cfm?id=2391085},
@@ -20877,7 +20936,7 @@ old title: The map equation and the resolution limit in community detection},
   number    = {3},
   pages     = {372-390},
   doi       = {10.1109/69.846291},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
 }
@@ -20945,7 +21004,7 @@ old title: The map equation and the resolution limit in community detection},
   volume    = {302-303},
   pages     = {303-330},
   doi       = {10.1016/s0024-3795(99)00182-2},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.27},
 }
@@ -21071,6 +21130,7 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {IEEE Global Telecommunications Conference},
   year      = {2003},
   doi       = {10.1109/glocom.2003.1258984},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.27},
 }
@@ -21383,7 +21443,7 @@ old title: The map equation and the resolution limit in community detection},
   pages     = {623-630},
   doi       = {10.1140/epjb/e2009-00335-8},
   file      = {:Predicting missing links via local information.pdf:PDF},
-  groups    = {Node Similarity/Distance},
+  groups    = {Node Similarity/Distance, Ignored},
   owner     = {Vincent},
   timestamp = {2016.09.27},
 }
@@ -21397,6 +21457,7 @@ old title: The map equation and the resolution limit in community detection},
   number    = {4},
   pages     = {e00122},
   doi       = {10.1128/mbio.00122-11},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.08},
 }
