added paper and completed corpus

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -2357,6 +2357,21 @@
   timestamp = {2012.07.29},
 }
 
+@Article{Bessouf2017,
+  author        = {Bessouf, O. and Khelladi, A. and Zaslavsky, T.},
+  title         = {New concept of connection in signed graphs},
+  journal       = {arXiv},
+  year          = {2017},
+  volume        = {math.CO},
+  pages         = {1708.01689},
+  __markedentry = {[Vincent:]},
+  file          = {:New concept of connection in signed graphs.pdf:PDF},
+  groups        = {_Misc. Signed},
+  owner         = {Vincent},
+  timestamp     = {2017.08.13},
+  url           = {https://arxiv.org/abs/1708.01689},
+}
+
 @InProceedings{Beyene2008,
   author    = {Beyene, Y. and Faloutsos, M. and Chau, D. H. and Faloutsos, C.},
   title     = {The eBay graph: How do online auction users interact?},
@@ -4750,6 +4765,20 @@
   owner     = {Vincent},
   timestamp = {2014.09.21},
   url       = {http://arxiv.org/abs/1409.4063},
+}
+
+@Article{Costa2016,
+  author    = {Costa, G. and Ortale, R.},
+  title     = {Model-Based Collaborative Personalized Recommendation on Signed Social Rating Networks},
+  journal   = {ACM Transactions on Internet Technology},
+  year      = {2016},
+  volume    = {16},
+  number    = {3},
+  pages     = {1-21},
+  doi       = {10.1145/2934681},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
 }
 
 @Article{Costantini2014,
@@ -7329,6 +7358,17 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   timestamp = {2017.06.30},
 }
 
+@InProceedings{Gangal2016,
+  author    = {Gangal, V. and Narwekar, A. and Ravindran, B. and Narayanam, R.},
+  title     = {Trust and Distrust Across Coalitions: Shapley Value Based Centrality Measures for Signed Networks},
+  booktitle = {30th AAAI Conference on Artificial Intelligence},
+  year      = {2016},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
+  url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/12137},
+}
+
 @Article{Gangemi2014,
   author    = {Gangemi, A. and Presutti, V. and Recupero, D. R.},
   title     = {Frame-Based Detection of Opinion Holders and Topics: A Model and a Tool},
@@ -7659,7 +7699,7 @@ arXiv url: https://arxiv.org/abs/1312.4345},
 @Article{Gilbert2010,
   author    = {Gilbert, J. A. and Field, D. and Swift, P. and Thomas, S. and Cummings, D. and Temperton, B. and Weynberg, K. and Huse, S. and Hughes, M. and Joint, I. and Somerfield, P. J. and Mühling, M.},
   title     = {The Taxonomic and Functional Diversity of Microbes at a Temperate Coastal Site: A `Multi-Omic' Study of Seasonal and Diel Temporal Variation},
-  journal   = {PLoS One},
+  journal   = {PLoS ONE},
   year      = {2010},
   volume    = {5},
   number    = {11},
@@ -7735,7 +7775,7 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   pages     = {326-335},
   doi       = {10.1007/978-981-10-5427-3_35},
   file      = {:Signed Social Networks- A Survey.pdf:PDF},
-  groups    = {_To do},
+  groups    = {Graph Partitioning, Done Manually},
   owner     = {Vincent},
   timestamp = {2017.07.28},
 }
@@ -8465,6 +8505,19 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2016.01.02},
+}
+
+@Article{Guo2016,
+  author    = {Guo, L. and Gao, F.},
+  title     = {How do signs organize in directed signed social networks},
+  journal   = {arXiv},
+  year      = {2016},
+  volume    = {physics.soc-ph},
+  pages     = {1606.00228},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
+  url       = {https://arxiv.org/abs/1606.00228},
 }
 
 @Article{Gupta2017,
@@ -10337,7 +10390,7 @@ arXiv url: https://arxiv.org/abs/1312.4345},
 @Article{Jiang2012a,
   author    = {Jiang, H. and An, L. and Lin, S. M. and Feng, G. and Qiu, Y.},
   title     = {A Statistical Framework for Accurate Taxonomic Assignment of Metagenomic Sequencing Reads},
-  journal   = {PLoS One},
+  journal   = {PLoS ONE},
   year      = {2012},
   volume    = {7},
   number    = {10},
@@ -10593,6 +10646,20 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.29},
+}
+
+@Article{Kant2013,
+  author    = {Kant, V. and Bharadwaj, K. K.},
+  title     = {Fuzzy Computational Models of Trust and Distrust for Enhanced Recommendations},
+  journal   = {International Journal of Intelligent Systems},
+  year      = {2013},
+  volume    = {28},
+  number    = {4},
+  pages     = {332-365},
+  doi       = {10.1002/int.21579},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
 }
 
 @Article{Kanungo2002,
@@ -12341,6 +12408,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.17},
+}
+
+@InProceedings{LeFalher2017,
+  author    = {Le Falher, G. and Cesa-Bianchi, N. and Gentile, C. and Vitale, F.},
+  title     = {On the Troll-Trust Model for Edge Sign Prediction in Social Networks},
+  booktitle = {20th International Conference on Artificial Intelligence and Statistics},
+  year      = {2017},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
+  url       = {https://arxiv.org/abs/1606.00182},
 }
 
 @Book{Lehrer1974,
@@ -16281,6 +16359,17 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.08.08},
 }
 
+@InProceedings{Patidar2012,
+  author    = {Patidar, A. and Agarwal, V. and Bharadwaj, K. K.},
+  title     = {Predicting Friends and Foes in Signed Networks Using Inductive Inference and Social Balance Theory},
+  booktitle = {2012 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
+  year      = {2012},
+  doi       = {10.1109/asonam.2012.69},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
+}
+
 @InCollection{Paul2004,
   author    = {Paul, T. V.},
   title     = {The enduring axioms of balance of power theory},
@@ -16451,6 +16540,17 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.28},
 }
 
+@InProceedings{Pitsilis2009,
+  author    = {Pitsilis, G. and Knapskog, S. J.},
+  title     = {Social Trust as a solution to address sparsity-inherent problems of Recommender systems},
+  booktitle = {ACM RecSys Workshop on Recommender Systems \& The Social Web},
+  year      = {2009},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
+  url       = {https://arxiv.org/abs/1208.1004},
+}
+
 @InProceedings{Pitsilis2011,
   author    = {Pitsilis, G. and Zhang, X. and Wang, W.},
   title     = {Clustering Recommenders in Collaborative Filtering Using Explicit Trust Information},
@@ -16517,6 +16617,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2013.11.21},
+}
+
+@Article{Pizzuti2017a,
+  author        = {Pizzuti, C.},
+  title         = {Evolutionary Computation for Community Detection in Networks: a Review},
+  journal       = {IEEE Transactions on Evolutionary Computation},
+  year          = {2017},
+  volume        = {in press},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/TEVC.2017.2737600},
+  file          = {:Evolutionary Computation for Community Detection in Networks- a Review.pdf:PDF},
+  groups        = {Graph Partitioning, _To do},
+  owner         = {Vincent},
+  timestamp     = {2017.08.18},
 }
 
 @Article{Plerou1999,
@@ -17753,7 +17867,7 @@ old title: The map equation and the resolution limit in community detection},
 @Article{Samsonovic2010,
   author    = {Samsonovic, A. V. and Ascoli, G. A.},
   title     = {Principal Semantic Components of Language and the Measurement of Meaning},
-  journal   = {PLoS One},
+  journal   = {PLoS ONE},
   year      = {2010},
   volume    = {5},
   number    = {6},
@@ -18950,7 +19064,7 @@ old title: The map equation and the resolution limit in community detection},
 @Article{Song2012,
   author    = {Song, W.-M. and di Matteo, T. and Aste, T.},
   title     = {Hierarchical Information Clustering by Means of Topologically Embedded Graphs},
-  journal   = {PLoS One},
+  journal   = {PLoS ONE},
   year      = {2012},
   volume    = {7},
   number    = {3},
@@ -19468,6 +19582,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp     = {2017.06.26},
 }
 
+@Article{Symeonidis2013b,
+  author    = {Symeonidis, P. and Tiakas, E.},
+  title     = {Transitive node similarity: predicting and recommending links in signed social networks},
+  journal   = {World Wide Web},
+  year      = {2013},
+  volume    = {17},
+  number    = {4},
+  pages     = {743-776},
+  doi       = {10.1007/s11280-013-0228-2},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
+}
+
 @Article{Szell2010,
   author    = {Szell, M. and Thurner, S.},
   title     = {Measuring social dynamics in a massive multiplayer online game},
@@ -19598,6 +19726,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Datasets, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.09},
+}
+
+@InProceedings{Tang2016,
+  author    = {Tang, J. and Aggarwal, C. and Liu, H.},
+  title     = {Recommendations in Signed Social Networks},
+  booktitle = {25th International Conference on World Wide Web},
+  year      = {2016},
+  doi       = {10.1145/2872427.2882971},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
 }
 
 @InProceedings{Tantipathananandh2007,
@@ -21348,6 +21487,29 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Found},
   owner     = {Vincent},
   timestamp = {2015.10.13},
+}
+
+@InProceedings{Wu2016,
+  author    = {Wu, Z. and Aggarwal, C. C. and Sun, J.},
+  title     = {The Troll-Trust Model for Ranking in Signed Networks},
+  booktitle = {9th ACM International Conference on Web Search and Data Mining},
+  year      = {2016},
+  doi       = {10.1145/2835776.2835816},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.21},
+}
+
+@InProceedings{Wu2017b,
+  author        = {Wu, Y. and Chao, P. and Ying, W. and He, L. and Chen, S.},
+  title         = {A Conical Area Evolutionary Algorithm Based on Modularity Q for Community Detection from Signed Networks},
+  booktitle     = {IEEE International Conference on Computational Science and Engineering / IEEE International Conference on Embedded and Ubiquitous Computing},
+  year          = {2017},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/CSE-EUC.2017.21},
+  groups        = {Graph Partitioning, _To do},
+  owner         = {Vincent},
+  timestamp     = {2017.08.16},
 }
 
 @Article{Xia2011,
